--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cumulocity-advanced-radial-gauge-widget-plugin",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Cumulocity Advanced Radial Gauge Widget shows the latest realtime measurement on a radial gauge.",
   "scripts": {
     "start": "c8ycli server ",
@@ -15,7 +15,7 @@
     "Plugin",
     "Widget"
   ],
-  "author": "Software AG, Global Presales",
+  "author": "Cumulocity Ecosystem",
   "license": "Apache-2.0",
   "dependencies": {
     "@angular/animations": "14.0.6",
